Se añaden los archivos HTML de las páginas web de cada destino.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             Travel Partners
         </h1>
 
-        <img src="media/main_banner.jpg" alt="Banner principal" />
+        <img src="media/main_banner.jpg" alt="Banner principal" width="600" height="200"/>
 
         <nav id="nav-menu">
 
@@ -80,7 +80,7 @@
                 </h3>
                 <a href="england.html" >
 
-                    <img src="media/england_image.jpeg" alt="Imagen referencia de inglaterra" />
+                    <img src="media/england_image.jpeg" alt="Imagen referencia de inglaterra" width="400" height="300"/>
 
                 </a>
 
@@ -91,9 +91,9 @@
                 <h3>
                     Nueva York
                 </h3>
-                <a href="" >
+                <a href="new_york.html" >
 
-                    <img src="" alt="" />
+                    <img src="media/new_york_image.jpg" alt="Imagen referencia de Nueva York" width="400" height="300"/>
 
                 </a>
 
@@ -104,9 +104,9 @@
                 <h3>
                     El Cairo
                 </h3>
-                <a href="" >
+                <a href="cairo.html" >
 
-                    <img src="" alt="" />
+                    <img src="media/cairo_image.jpg" alt="Imagen referencia del Cairo" width="400" height="300"/>
 
                 </a>
 
@@ -117,9 +117,9 @@
                 <h3>
                     Japón
                 </h3>
-                <a href="" >
+                <a href="japan.html" >
 
-                    <img src="" alt="" />
+                    <img src="media/japan_image.jpg" alt="Imagen referencia de Japón" width="400" height="300"/>
 
                 </a>
 
@@ -130,9 +130,9 @@
                 <h3>
                     Roma
                 </h3>
-                <a href="" >
+                <a href="rome.html" >
 
-                    <img src="" alt="" />
+                    <img src="media/rome_image.jpeg" alt="Imagen referencia de Roma" width="400" height="300"/>
 
                 </a>
 
@@ -143,9 +143,9 @@
                 <h3>
                     Medellín
                 </h3>
-                <a href="" >
+                <a href="medellin.html" >
 
-                    <img src="" alt="" />
+                    <img src="media/medellin_image.jpg" alt="Imagen referencia de Medellín" width="400" height="300"/>
 
                 </a>
 
@@ -163,7 +163,11 @@
                 ¿Quiénes Somos?
             </h2>
             <p>
-                Aqui va la descripción breve sobre TP... 
+                En Travel Partners, hacemos realidad tus sueños de viaje. 
+                Somos más que una simple agencia de viajes; somos tus compañeros de viaje, tu guía experta en explorar el mundo.
+                Desde emocionantes aventuras hasta relajantes escapadas, nuestro equipo dedicado está aquí para crear experiencias inolvidables a medida para ti.
+                Conéctate con nosotros y deja que juntos descubramos destinos extraordinarios y momentos inolvidables.
+
             </p>
 
         </section>
@@ -172,11 +176,15 @@
 
     <footer>
 
+        <a href="#main-title">
+            <img src="media/arrowUp.png" alt="Volver arriba"/>
+        </a>
+
         <p>
-            Sitio Agencia Travel Partner desarrollado por Abdy Sánchez :))
+            <i>WebSite Agencia Travel Partner desarrollado por Abdy Sánchez :))</i> 
         </p>
         <p>
-            Contacto: abdy.sanchez@udea.edu.co
+            <i>Contacto: abdy.sanchez@udea.edu.co</i>
         </p>
 
     </footer>
