--- a/rome.html
+++ b/rome.html
@@ -6,7 +6,7 @@
         <meta charset="utf-8" />
         <meta name="author" content="Abdy Sánchez :))" />
         <link rel="icon" href="media/plane16.png" type="image/x-icon" />
-        <title>𝐓𝐫𝐚𝐯𝐞𝐥 𝐏𝐚𝐫𝐭𝐧𝐞𝐫𝐬 • 𝐈𝐧𝐠𝐥𝐚𝐭𝐞𝐫𝐫𝐚</title>
+        <title>𝐓𝐫𝐚𝐯𝐞𝐥 𝐏𝐚𝐫𝐭𝐧𝐞𝐫𝐬 • 𝐑𝐨𝐦𝐚</title>
     </head>
 
     <body>
@@ -20,7 +20,7 @@
             </a>
     
             <p>
-                <i>WebSite Agencia Travel Partner desarrollado por Abdy Sánchez :))</i>  
+                <i>WebSite Agencia Travel Partner desarrollado por Abdy Sánchez :))</i> 
             </p>
             <p>
                 <i>Contacto: abdy.sanchez@udea.edu.co</i>
