Avances generales + imágenes.

--- a/index.html
+++ b/index.html
@@ -163,9 +163,9 @@
                 ¿Quiénes Somos?
             </h2>
             <p>
-                En Travel Partners, hacemos realidad tus sueños de viaje. 
-                Somos más que una simple agencia de viajes; somos tus compañeros de viaje, tu guía experta en explorar el mundo.
-                Desde emocionantes aventuras hasta relajantes escapadas, nuestro equipo dedicado está aquí para crear experiencias inolvidables a medida para ti.
+                En Travel Partners, hacemos realidad tus sueños de viaje.  
+                Somos más que una simple agencia de viajes; somos tus compañeros de viaje, tu guía experta en explorar el mundo. 
+                Desde emocionantes aventuras hasta relajantes escapadas, nuestro equipo dedicado está aquí para crear experiencias inolvidables a medida para ti. 
                 Conéctate con nosotros y deja que juntos descubramos destinos extraordinarios y momentos inolvidables.
 
             </p>
@@ -177,7 +177,7 @@
     <footer>
 
         <a href="#main-title">
-            <img src="media/arrowUp.png" alt="Volver arriba"/>
+            <img src="media/arrowUp.png" alt="Volver arriba" width="30" height="30"/>
         </a>
 
         <p>
