--- a/rome.html
+++ b/rome.html
@@ -17,6 +17,8 @@
                 Roma
             </h1>
 
+            <img src="media/rome_def_image.jpg" alt="Imagen principal" width="560" height="315"/>
+
             <nav id="nav-menu">
 
 
@@ -64,9 +66,21 @@
 
                 <section id="tralev-spot-description">
 
+                    <h2>Descripción</h2>
+
+                    <p>Roma, la capital de Italia, es una extensa ciudad cosmopolita que tiene a la vista casi 3,000 años de arte, arquitectura y cultura de influencia mundial. Las ruinas antiguas como las del Foro y el Coliseo evocan el poder del antiguo Imperio Romano. La ciudad del Vaticano, sede central de la Iglesia católica romana, cuenta con la Basílica de San Pedro y los Museos del Vaticano, que albergan obras maestras como los frescos de la Capilla Sixtina de Miguel Ángel.</p>
+
+                    <ul>
+                        <li><b>Fundación:</b> 21 de abril de 753 a.C. </li>
+                        <li><b>Población:</b> 2.873 millones (2017) </li>
+                        <li><b>Gentilicio:</b> Romano, -na</li>
+                    </ul>
+
                 </section>
 
                 <section id="tralev-spot-attractions">
+
+                    <h2>Atracciones destacadas</h2>
 
                     <ul id="attraction-list">
 
@@ -77,10 +91,31 @@
                 </section>
 
                 <section id="schedules">
+
+                    <h2>Itinerarios y cosas para hacer</h2>
                     
                 </section>
 
                 <section id="prices">
+
+                    <h2>Costos $</h2>
+
+                    <ul>
+                        <li>
+                            <h5>Vuelos</h5>
+                            <a href="" target="_blank">
+                                <img src="media/plane2.png" alt="icono avion"/>
+                            </a>
+                        </li>
+
+                        <li>
+                            <h5>Hoteles</h5>
+                            <a href="" target="_blank">
+                                <img src="media/hotel.png" alt="icono hotel"/>
+                            </a>
+                        </li>
+
+                    </ul>
                     
                 </section>
 
