--- a/medellin.html
+++ b/medellin.html
@@ -17,6 +17,8 @@
                 Medellín
             </h1>
 
+            <img src="media/medellin_def_image_main.jpg" alt="Imagen Principal" width="560" height="315"/>
+
             <nav id="nav-menu">
 
 
@@ -64,23 +66,110 @@
 
                 <section id="tralev-spot-description">
 
+                    <h2>Descripción</h2>
+
+                    <p>Medellín es la capital de la provincia montañosa de Antioquia en Colombia. Es apodada la "Ciudad de la eterna primavera" por su clima templado y alberga la famosa Feria de las Flores anual. El moderno Metrocable conecta la ciudad con los barrios circundantes y tiene vistas del Valle de Aburrá que se encuentra debajo. Las esculturas de Fernando Botero decoran la Plaza Botero en el centro de la ciudad, mientras que el Museo de Antioquia exhibe más obras del artista colombiano</p>
+
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d126916.74116927272!2d-75.66361344761124!3d6.244197043328658!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e4428dfb80fad05%3A0x42137cfcc7b53b56!2sMedell%C3%ADn%2C%20Antioquia!5e0!3m2!1ses-419!2sco!4v1709925554634!5m2!1ses-419!2sco" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
                 </section>
 
                 <section id="tralev-spot-attractions">
 
+                    <h2>Atracciones destacadas</h2>
+
                     <ul id="attraction-list">
 
-                        <li></li>
+                        <li>
+                            <h4>Plaza Botero</h4>
+                            <p>Puedes empezar a visita a Medellín en la Plaza Botero, en el corazón del centro histórico. Allí se encuentra el Parque de las Esculturas, una galería de arte al aire libre, donde se exponen 23 esculturas de un tamaño considerable y con ese estilo tan reconocible de grandes volúmenes del artista local Fernando Botero.
+
+                                Visitar este parque será una de las mejores cosas que hacer en Medellín con niños: fliparán con las esculturas y es un lugar muy agradable.</p>
+                        </li>
+
+                        <li>
+                            <h4>Palacio de la Cultura Rafael Uribe Uribe</h4>
+                            <p>En la misma plaza hay un par de sitios que no puedes perderte. El primero de ellos es el Palacio de la Cultura Rafael Uribe Uribe. Se trata de uno de los edificios más bonitos de la ciudad, además se puede entrar gratis! Lo mejor es subir hasta la terraza abierta de la última planta desde donde tendrás unas vistas estupendas.</p>
+                        </li>
+
+                        <li>
+                            <h4>Museo de Antioquía</h4>
+                            <p>El otro es el Museo de Antioquía, el más importante de Medellín. Está ubicado en el antiguo Palacio Municipal de Medellín y cuenta con una colección de más de 5.000 piezas, entre ellas objetos indígenas y cuadros de autores como Botero y otros autores internacionales. El precio es de 22.000$ (unos 5€).</p>
+                        </li>
+
+                        <li>
+                            <h4>Casa de la Memoria</h4>
+                            <p>Aunque creemos que hay un museo más interesante: la Casa de la Memoria, donde acercarse a los años de la guerra del narcotráfico, con la idea de aprender de los errores del pasado para construir un futuro de paz.</p>
+                        </li>
+
+                        <li>
+                            <h4>Avenida Carabobo</h4>
+                            <p>Seguimos en el centro de Medellín para recorrer una de sus avenidas peatonales más famosas, la llamada Carabobo (Carrera 52). Allí no te olvides de visitar el Centro Comercial Palacio Nacional.
+
+                                No, nos vamos de compras… Este edificio albergaba el antiguo tribunal de justicia, y aunque por fuera no te llame especialmente la atención, en su interior encontrarás una decoración muy chula, con montones de arcos y una cúpula de cristal. Por cierto, este edificio era conocido por ser el lugar preferido por los suicidas para acabar con sus vidas… Lo hacían tirándose al vacío desde la planta 9</p>
+                        </li>
 
                     </ul>
+
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/H8-ij0mG2jM?si=gzP1SUCHHmX1VZJ1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
                 </section>
 
                 <section id="schedules">
+
+                    <h2>Itinerarios y cosas para hacer</h2>
+
+                    <ul>
+                        <li>
+                            <h4>Día 1: Ver la transformación de la comuna 13</h4>
+                            <p>Una de las zonas históricamente más violentas de Medellín es hoy el atractivo turístico principal de la ciudad. En la comuna 13 conocerás decenas de historias de famílias y jóvenes que transformaron su realidad gracias a las expresiones culturales y la transformación urbanística.  Mi consejo principal es que la visites en la mañana y si es posible en días de semana para evitar multitudes.</p>
+                        </li>
+
+                        <li>
+                            <h4>Día 2: Hacer el tour de Pablo Escobar</h4>
+                            <p>Pablo Escobar fue uno de los mayores narcotraficantes de la historia y nació en Medellín. Pero más allá de ser una figura icónica de la cultura popular alrededor del mundo, fue el líder de una guerra que acabó con la vida de Miles de inocentes. Conoce dónde vivió, operó y el lugar donde murió en este recorrido que te muestra los lugares más representativos para el capo del Cartel de Medellín.</p>
+                        </li>
+
+                        <li>
+                            <h4>Día 3: Salir de fiesta en el Lleras</h4>
+                            <p>El Lleras es el sector con la mayor oferta de bares y discotecas de Medellín. Si lo tuyo es salir de fiesta, conocer personas y bailar hasta que amanezca, puedes agregarlo desde ya en tu lista de actividades.</p>
+                        </li>
+
+                        <li>
+                            <h4>Día 4: Cenar y beber en Provenza </h4>
+                            <p>La calle de Provenza es catalogada como una de las calles más cool del mundo por la revista TimeOut. Y además, uno de mis sitios favoritos para comer y tomar tragos en los lugares más cosmopolita de la ciudad.</p>
+                        </li>
+
+                        <li>
+                            <h4>Día 5: Comer en Mercado del Río</h4>
+                            <p>Cuando se trata de salir a comer en grupo no creo que haya una mejor opción que Mercado del Río. Una gran plaza con comida local e internacional, donde cada persona puede pedir la comida de su preferencia y comer juntos en la misma mesa. El ambiente del lugar es muy bueno y además hay opciones para todos los presupuestos.</p>
+                        </li>
+                    </ul>
+
+                    <img src="media/medellin_def_image2.jpg" alt="Imagen de referencia"/>
                     
                 </section>
 
                 <section id="prices">
+
+                    <h2>Costos $</h2>
+
+                    <ul>
+                        <li>
+                            <h5>Vuelos</h5>
+                            <a href="https://www.google.com/travel/flights?client=opera-gx&sca_esv=935992698d2d35ba&biw=1325&bih=619&sxsrf=ACQVn0_hYhOc5Ef1lpgHIpVstFaGseHaeg%3A1709928728908&source=flun&uitype=cuA_&hl=es-419&gl=co&curr=COP&tfs=CAEQARobEgoyMDI0LTAzLTI0ag0IAhIJL20vMDF4XzZzGhsSCjIwMjQtMDMtMjhyDQgCEgkvbS8wMXhfNnN6ZENqUklOV0pTVDBkTFkxRXpObWRCUlU5R2RHZENSeTB0TFMwdExTMHRMWFowWTJjeU9FRkJRVUZCUjFoeVkxSnJRWFZFTkVWQkVnRTFHZ3NJbnBJR0VBQWFBME5QVURnd2NJc1U%3D" target="_blank">
+                                <img src="media/plane2.png" alt="icono avion"/>
+                            </a>
+                        </li>
+
+                        <li>
+                            <h5>Hoteles</h5>
+                            <a href="https://www.google.com/travel/flights?client=opera-gx&sca_esv=935992698d2d35ba&biw=1325&bih=619&sxsrf=ACQVn0_hYhOc5Ef1lpgHIpVstFaGseHaeg%3A1709928728908&source=flun&uitype=cuA_&hl=es-419&gl=co&curr=COP&tfs=CAEQARobEgoyMDI0LTAzLTI0ag0IAhIJL20vMDF4XzZzGhsSCjIwMjQtMDMtMjhyDQgCEgkvbS8wMXhfNnN6ZENqUklOV0pTVDBkTFkxRXpObWRCUlU5R2RHZENSeTB0TFMwdExTMHRMWFowWTJjeU9FRkJRVUZCUjFoeVkxSnJRWFZFTkVWQkVnRTFHZ3NJbnBJR0VBQWFBME5QVURnd2NJc1U%3D" target="_blank">
+                                <img src="media/hotel.png" alt="icono hotel"/>
+                            </a>
+                        </li>
+
+                    </ul>
                     
                 </section>
 
