--- a/rome.html
+++ b/rome.html
@@ -84,15 +84,80 @@
 
                     <ul id="attraction-list">
 
-                        <li></li>
+                        <li>
+                            <h4>Coliseo</h4>
+                            <p>El Coliseo, construido en el año 80 d. C., fue el mayor anfiteatro de todo el Imperio romano. Hoy día nos recuerda la grandeza y la barbarie de esa época. Situado a unos 20 minutos al sudeste del Vaticano, aquí tenían lugar batallas entre famosos gladiadores, cazas de animales y luchas entre bestias.
+
+                                Se ofrecen visitas guiadas para recorrer la enorme arena de combate, los túneles y pasajes por donde se transportaba a los animales y las salas subterráneas de los gladiadores. Podrás conocer más sobre este lugar en su pequeña zona de exposiciones, donde se describe con detalle la larga historia del Coliseo y se explican las obras de restauración que aún continúan.</p>
+                        </li>
+
+                        <li>
+                            <h4>Basílica de San Pedro</h4>
+                            <p>La basílica de San Pedro es el edificio más característico del centro de la ciudad del Vaticano, que además se considera uno de los sitios más sagrados de la cristiandad. En la basílica se pueden realizar visitas públicas, aunque es necesario ceñirse a un estricto código de vestimenta, así que evita los pantalones cortos o las camisetas que dejan los hombros al descubierto. Esta iglesia renacentista se encuentra a 4 kilómetros al oeste del Coliseo.
+
+                                Cuando hayas terminado de fotografiar la escénica estampa de la basílica de San Pedro y su cúpula desde la plaza, te recomendamos subir los 320 peldaños hasta lo alto de la cúpula y disfrutar de unas vistas inigualables de la plaza y el horizonte de Roma.</p>
+                        </li>
+
+                        <li>
+                            <h4>Fontana di Trevi</h4>
+                            <p>La Fontana di Trevi, situada en pleno centro de la ciudad, en la Piazza di Trevi, es la fuente barroca de mayor tamaño de toda Roma. La fuente, que es una de las visitas imprescindibles de la ciudad, incluye esculturas del dios romano Neptuno y otros seres mitológicos, y tiene el Palazzo Poli como telón de fondo.
+
+                                Puedes imitar lo que otros visitantes vienen haciendo desde hace bastante tiempo y tirar monedas a la Fontana di Trevi para tener buena suerte. Hay muchísimas opciones para tomar algo en los alrededores, desde trattorias a pizzerías, pasando por las tiendas y los quioscos situados justo al lado de la fuente, donde podrás comprar un café, tartas o un helado.</p>
+                        </li>
+
+                        <li>
+                            <h4>Panteón</h4>
+                            <p>El Foro Romano se encuentra en un valle entre la colina Palatina y la del Capitolino, un lugar donde puedes pasear por una enorme zona repleta de antiguas ruinas de basílicas y templos romanos, con enormes arcos y columnas, ruinas de monumentos, cuidados jardines, piscinas y manantiales.
+
+                                Entre los templos en ruinas que hay dentro del Foro Romano se encuentran los de Venus y Roma, César, Vespasiano, Tito y Rómulo. A pesar de que del más importante de todos, el de Saturno, solo queda su pórtico frontal, sigue dominado el horizonte. Puedes explorar el valle en segway o recorrer sus 4 hectáreas a pie.</p>
+                        </li>
+                        
 
                     </ul>
+
+                    <img src="media/rome_def_image2.jpg" alt="Imagen de referencia" width="560" height="315"/>
 
                 </section>
 
                 <section id="schedules">
 
                     <h2>Itinerarios y cosas para hacer</h2>
+
+                    <ul>
+                        <li>
+                            <h4>Día 1: Visita el Coliseo por dentro</h4>
+                            <p>Podría decirse que este anfiteatro es el guardián de Roma. Es el monumento más visitado de la ciudad y sus galerías internas atrapan a la vista en la misma medida que lo hacen sus muros exteriores dibujados por arcos y columnas griegas. Desde que se construyera en el año 72 d.C, el Coliseo ha presenciado un sinfín de historias de gladiadores y luchas de animales, pero esas ya te las contarán en uno de los múltiples tours guiados del Coliseo.</p>
+
+                        </li>
+
+                        <li>
+                            <h4>Día 2: Maravíllate en la Plaza de San Pedro</h4>
+                            <p>La Ciudad del Vaticano es una visita más que imprescindible en Roma y hablar del Vaticano es hablar de la Capilla Sixtina y de la Plaza de San Pedro. Lo Museos Vaticanos y la Basílica de San Pedro que preside la plaza son los dos puntos de referencia del estado más pequeño del mundo.
+
+                                Seguramente hayas visto en más de una fotografía aérea esta plaza de forma oval rodeada por dos semicírculos; te adelanto que es esta la vista que se consigue subiendo a la Cúpula de San Pedro (la entrada a la basílica de San Pedro es gratuita, pero no así la subida a la cúpula).</p>
+
+                        </li>
+
+                        <li>
+                            <h4>Día 3: Recorre el Foro Romano y el Monte Palatino</h4>
+                            <p>El Foro era el lugar en el que se concentraba toda la vida judicial, política y comercial de la Antigua Roma y a día de hoy es una impresionante muestra de restos arqueológicos a través de los cuales se puede adivinar la esencia de esa época dorada de la ciudad.
+
+                                Después de un tour guiado del Foro Romano, podrás visitar el cercano Monte Palatino: la más céntrica de las siete colinas de Roma desde la cual también se pueden contemplar extraordinarios restos arqueológicos. Tanto los tours guiados del Coliseo como las entradas al Coliseo suelen incluir el acceso a esta zona, pero si estás pensando en visitar también el Vaticano, te recomiendo que explores la opción de conseguir la visita conjunta al Vaticano y al Coliseo: merece mucho la pena ¡y ahorrarás en entradas!</p>
+
+                        </li>
+
+                        <li>
+                            <h4>Día 4: Empápate de tradición e historia con un tour guiado por el centro</h4>
+                            <p>Hacer uno de los tours guiados por el centro histórico de Roma es una de las mejores ideas para recorrer la ciudad comprendiendo lo que ves. Esta sería la experiencia que yo elegiría en la mayoría de las ciudades a las que viajo porque, lejos de las aburridas visitas que te abrumaban con interminables fechas y datos históricos, los tours de hoy en día son cada vez más auténticos y tienen más variedad como es el caso de los tours nocturnos de Roma o de los tours fotográficos de Roma.</p>
+
+                        </li>
+
+                        <li>
+                            <h4>Día 5: Tómate un helado frente a la Fontana de Trevi</h4>
+                            <p>Roma se caracteriza por sus fuentes y sin duda esta es la más emblemática de todas. Aparecerá por sorpresa mientras doblas una esquina paseando por el centro histórico de la ciudad y lo primero que te sorprenderá será su tamaño. Esta fuente barroca representa a Neptuno y dos tritones y es conocida por la leyenda de que si echas una moneda a ella volverás a Roma y si echas dos encontrarás el amor en Italia.</p>
+
+                        </li>
+                    </ul>
                     
                 </section>
 
@@ -103,14 +168,14 @@
                     <ul>
                         <li>
                             <h5>Vuelos</h5>
-                            <a href="" target="_blank">
+                            <a href="https://www.google.com/travel/flights?client=opera-gx&sca_esv=5142109eb9a6b53e&sxsrf=ACQVn0_WiXF6cCO_kNI3C3SOLMdckaSQFQ%3A1709925170958&source=flun&uitype=cuAA&hl=es-419&gl=co&curr=COP&tfs=CAEQAhojEgoyMDI0LTA0LTI1agcIARIDTURFcgwIAhIIL20vMDZjNjIaIxIKMjAyNC0wNS0wOGoMCAISCC9tLzA2YzYycgcIARIDTURFemxDalJJWVhoaE4zZ3dVM2RETmxsQlJVaE1OV2RDUnkwdExTMHRMUzB0TFhWcWJuTXlNa0ZCUVVGQlIxaHlXWHBOUWtaVlZubEJFZ05qVlZnYURBalE2L3NCRUFBYUEwTlBVRGd3Y01TM0JnPT0%3D" target="_blank">
                                 <img src="media/plane2.png" alt="icono avion"/>
                             </a>
                         </li>
 
                         <li>
                             <h5>Hoteles</h5>
-                            <a href="" target="_blank">
+                            <a href="https://www.google.com/travel/search?ts=CAESABoqChISEAoIL20vMDZjNjI6BFJvbWESFBISCgcI6A8QBBgZEgcI6A8QBRgIKgIKAA&ved=0CAcQyJABahcKEwiQ4_Pkr-WEAxUAAAAAHQAAAAAQBA&ictx=3&hl=es-419&gl=co&client=opera-gx" target="_blank">
                                 <img src="media/hotel.png" alt="icono hotel"/>
                             </a>
                         </li>
